new info on the site

--- a/project/example/index.html
+++ b/project/example/index.html
@@ -1070,7 +1070,7 @@
     
     <li>
       <a href="https://vk.com/livasan" target="_blank" rel="noopener">
-        <i class="fas fa-graduation-cap"></i>
+        <i class="fab fa-vk"></i>
       </a>
     </li>
   
